--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,18 @@ plugins {
     id "java"
 }
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.14.0'
+    compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.14.0'
+
+    compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.14'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
 protobuf {
     protoc {
         artifact = 'com.google.protobuf:protoc:4.0.0-rc-2'
