--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.grpc:grpc-netty-shaded:1.35.0'
+    implementation 'io.grpc:grpc-protobuf:1.35.0'
+    implementation 'io.grpc:grpc-stub:1.35.0'
+    compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
+
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.14.0'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.14.0'
+    compile group: 'io.grpc', name: 'protoc-gen-grpc-java', version: '1.14.0'
 
     compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.14'
     testCompile group: 'junit', name: 'junit', version: '4.12'
